Resolved some local environment problem. Created working hibernate example

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,16 @@
       <scope>provided</scope>
     </dependency>
 
+    <!-- db stuff starts -->
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>5.2.6.Final</version>
+    </dependency>
+
+
+    <!-- db stuff ends-->
+
   </dependencies>
 
   <build>
