--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -7,5 +7,5 @@ db.password=123456
 #Hibernate Configuration:
 db.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 db.hibernate.show_sql=true
-db.entitymanager.packages.to.scan=woodstore.model
+db.entitymanager.packages.to.scan=woodstore
 db.hibernate.hbm2ddl.auto=create
