--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,18 @@
       <artifactId>ojdbc6</artifactId>
       <version>11.2.0.3</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+      <version>4.0.2.RELEASE</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+      <version>4.0.2.RELEASE</version>
+    </dependency>
   </dependencies>
 
   <repositories>
