repaired package scan

--- a/src/main/resources/postgresDB.properties
+++ b/src/main/resources/postgresDB.properties
@@ -2,7 +2,7 @@
 db.driver=org.postgresql.Driver
 db.url=jdbc:postgresql://localhost:5432/woodstore
 db.username=postgres
-db.password=Unexpirience1
+db.password=Qq123456
 
 #Hibernate Configuration:
 db.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
