--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,12 @@
             <version>5.4.1.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
     </dependencies>
 
     <repositories>
