--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,13 @@
             <version>1.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.16</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <repositories>
@@ -132,6 +139,8 @@
             <url>https://code.lds.org/nexus/content/groups/main-repo</url>
         </repository>
     </repositories>
+
+
 
     <build>
         <finalName>woodStore</finalName>
